--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col justify-center m-5">
-	<div
+<div  class="flex flex-col justify-center m-5">
+	<button [routerLink]="'/hotels/'+ hotel.id"
 		class="relative flex flex-col md:flex-row md:space-x-5 space-y-3 md:space-y-0 rounded-xl shadow-lg p-3 max-w-xs md:max-w-3xl mx-auto border border-white bg-white">
 		<div class="w-full md:w-1/3 bg-white grid place-items-center">
 			<img [src]="host + '/photo/' + hotel.id" alt="tailwind logo" class="rounded-xl" />
@@ -31,5 +31,5 @@
 					<span class="font-normal text-gray-600 text-base">€/night</span>
 				</p>
 			</div>
-		</div>
+		</button>
 	</div>
