--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,13 +3,13 @@
       <!-- navbar -->
     <nav class="flex justify-between bg-gray-900 text-white w-screen">
       <div class="px-5 xl:px-12 py-6 flex w-full items-center">
-        <a class="text-3xl font-bold font-heading" routerLink="/">
+        <a class="text-3xl font-bold font-heading" routerLink="/" (click)="refreshList()">
           <!-- <img class="h-9" src="logo.png" alt="logo"> -->
           MyVoyage
         </a>
         <!-- Nav Links -->
         <ul class="hidden md:flex px-4 mx-auto font-semibold font-heading space-x-12">
-          <li><a class="hover:text-gray-200" href="#">Home</a></li>
+          <li><a class="hover:text-gray-200" (click)="refreshList()" routerLink="/">Home</a></li>
           <li class="relative">
             <input type="checkbox" id="sortbox" class="hidden absolute">
             <label for="sortbox" class="flex items-center space-x-1 cursor-pointer">
@@ -20,7 +20,7 @@
             </label>
                 <div id="sortboxmenu" class="absolute mt-1 right-1 top-full min-w-max shadow rounded opacity-0 bg-gray-300 border border-gray-400 transition delay-75 ease-in-out z-10">
                 <ul class="block text-right text-gray-900" *ngFor="let city of destinations$">
-                    <li (click)="onClick(city)" ><a href="#" class="block px-3 py-2 hover:bg-gray-200">{{city.name}} - {{city.country}}</a></li>
+                    <li (click)="onClick(city)" ><a  class="block px-3 py-2 hover:bg-gray-200">{{city.name}} - {{city.country}}</a></li>
                 </ul>
             </div>
 
@@ -38,7 +38,7 @@
         <!-- Header Icons -->
         <div class="hidden xl:flex items-center space-x-5">
           <!-- Sign In / Register      -->
-          <a class="flex items-center hover:text-gray-200" routerLink="/loginForm">
+          <a class="flex items-center hover:text-gray-200" routerLink="/login">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
