--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,35 +1,56 @@
 <div  class="flex flex-col justify-center m-5">
-	<button [routerLink]="'/hotels/'+ hotel.id"
+	<a
 		class="relative flex flex-col md:flex-row md:space-x-5 space-y-3 md:space-y-0 rounded-xl shadow-lg p-3 max-w-xs md:max-w-3xl mx-auto border border-white bg-white">
 		<div class="w-full md:w-1/3 bg-white grid place-items-center">
-			<img [src]="host + '/photo/' + hotel.id" alt="tailwind logo" class="rounded-xl" />
+			<img [routerLink]="'/hotels/'+ hotel.id" [src]="host + '/photo/' + hotel.id" alt="tailwind logo" class="rounded-xl" />
     </div>
 			<div class="w-full md:w-2/3 bg-white flex flex-col space-y-2 p-3">
 				<div class="flex justify-between item-center">
-					<div class="flex items-center">
+					<div class="flex items-center w-full justify-between">
+            <div class="flex items-center">
+              <ng-container *ngFor="let i of getRange()">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20"
+                fill="currentColor">
+                <path
+                  d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+              </svg>
+              </ng-container>
+            </div>
 
-            <ng-container *ngFor="let i of getRange()">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20"
-							fill="currentColor">
-							<path
-								d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-						</svg>
+            <div>
+              <a class="w-auto" *ngIf="isAdmin$" (click)="deleteHotel(hotel.id)">
+                <div class="flex-1 h-full">
+                  <div class="flex items-center justify-center flex-1 h-full p-2 border border-red-500 text-red-500 shadow rounded-lg hover:bg-red-500 hover:border-red-500 hover:text-white">
+                    <div class="relative">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a class="w-auto" *ngIf="isAdmin$" [routerLink]="'/updateForm/'+ hotel.id" >
+                <div class="flex-1 h-full">
+                  <div class="flex items-center justify-center flex-1 h-full p-2 border border-red-500 text-red-500 shadow rounded-lg hover:bg-red-500 hover:border-red-500 hover:text-white">
+                    <div class="relative">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hover:text-white text-red-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-            </ng-container>
-            {{hotel.rate}}
 
-						<p class="text-gray-600 font-bold text-sm ml-1">
-
-							<span class="text-gray-500 font-normal">(X reviews)</span>
-						</p>
 					</div>
 				</div>
-				<h3 class="font-black text-gray-800 md:text-3xl text-xl">{{hotel.name}}</h3>
-				<p class="md:text-lg text-gray-500 text-base">{{hotel.description}}</p>
+				<h3 class="font-black text-gray-800 md:text-3xl text-lg">{{hotel.name}}</h3>
+				<p class=" text-gray-500 text-sm">{{hotel.address}}</p>
 				<p class="text-xl font-black text-gray-800">
 					{{hotel.price}}
 					<span class="font-normal text-gray-600 text-base">€/night</span>
 				</p>
 			</div>
-		</button>
+		</a>
 	</div>
