--- a/src/app/components/hotel/hotel.component.html
+++ b/src/app/components/hotel/hotel.component.html
@@ -1,1 +1,28 @@
-<p>hotel works!</p>
+<div class="bg-gray-100" *ngIf="hotel">
+  <div class="container mx-auto p-8 flex justify-center items-center h-screen">
+    <!-- Partie gauche -->
+    <div class="flex-1">
+      <h1 class="text-4xl font-bold mb-4">{{hotel.name}}</h1>
+      <p class="text-lg text-gray-700">{{hotel.description}}</p>
+        <div class="mt-8">
+          <p class="text-lg font-bold">Prix le plus bas : {{hotel.price}}€/nuit</p>
+          <p class="text-lg flex items-center">Nombre d'étoiles :
+            <ng-container *ngFor="let i of getRange()" >
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20"
+              fill="currentColor">
+              <path
+                d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+            </svg>
+            </ng-container>
+          </p>
+          <p class="text-lg">{{hotel.address}}</p>
+          <p class="text-lg">Téléphone : {{hotel.phone}}</p>
+        </div>
+    </div>
+
+    <!-- Partie droite -->
+    <div class="flex-1">
+      <img [src]="host + '/photo/' + hotel.id" alt="Image" class="w-full rounded-lg shadow-md">
+    </div>
+  </div>
+</div>
